# MathAlign-DPO

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: __init__.py  load_config.py  qwen25_0_5b_m5_24gb_mini.yaml  qwen25_3b_4090.yaml  qwen25_3b_4090_full_bf16.yaml
data/Math-10K/: metadata.json  split_manifest.json
docs/: data_contract.md  design.md
dpo/: __init__.py  data.py  evaluate.py  modeling.py  train.py
evaluation/: __init__.py  common.py  evaluate.py  run.py
plans/: refactor_stage1_data.md  stage_1.md  stage_2.md  stage_3.md  stage_4.md  stage_5.md
reports/: stage_1_refactor_report.md  stage_1_report.md  stage_2_refactor_report.md  stage_2_report.md  stage_3_refactor_report.md  stage_3_report.md  stage_4_report.md  stage_5_report.md
scripts/: __init__.py  build_dpo_v2.py  build_stage2_data.py  evaluate_math.py  prepare_data.py  train_dpo.py  train_sft.py
sft/: __init__.py  checkpointing.py  data.py  evaluate.py  modeling.py  train.py
src/mathalign_dpo/: __init__.py
src/mathalign_dpo/config/: __init__.py  load_config.py
src/mathalign_dpo/data/: __init__.py  build_sft.py  (+9 more)
tests/: test_answer_normalization.py  test_config.py  test_dpo_data.py  test_evaluate_math_cli.py  test_evaluation_data.py  test_model_loader.py  test_normalize_numina.py  test_packaging.py  test_parse_steps.py  test_preference_eval.py  test_runtime_metadata.py  test_select_views.py  test_sft_data.py  test_split_normalized.py  test_stage2_builders.py  test_stage2_pipeline.py  test_train_dpo_cli.py  test_train_sft_cli.py  test_write_outputs.py
(+36 files in other folders)
