[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mathalign-dpo"
version = "0.1.0"
description = "Stage-wise math reasoning post-training pipeline."
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
