[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mathalign-dpo"
version = "0.1.0"
description = "Stage-wise math reasoning post-training pipeline."
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "sft*", "dpo*", "configs*"]
